src/scss/patterns/_intro.scss
/**
 * Hero
 */

.intro{
    position:relative;
    margin-bottom: 1em;
    border-bottom: 1px solid $maincolor;
    
    &__svg{
        width: 100%;
        height: auto;
        // border: 1px solid red;
        margin-top:-2em;
        position: relative;
        z-index: -1;
    }

    &__text{
        color:$darkcolor;
        z-index:5;
        position:absolute;
        top:0;
        left:0;
    }
}

.intro__text,
.project__list{
font-size: 1.3em;
line-height: 1.15em;
text-transform: uppercase;
@include breakpoints(sm){
    font-size: 1.77em;
}
}

